@@ -1,3 +1,7 @@
+2011-02-15  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #17587: htmlArea RTE: RTE should not be enabled on Android
+
 2011-02-14  Tolleiv Nietsch  <typo3@tolleiv.de>
 
 	* Fixed bug #17541: cookies are not required in CLI mode / cookieSecure blocks cli
